[package]
name = "rodin"
version = "0.1.0"
description = "A small implementation of the game Odin in ratatui"
authors = ["Poutchy <enzo.mauti@etu.univ-smb.fr>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
